[gd_scene load_steps=4 format=3 uid="uid://cfrfbxpcfw2se"]

[ext_resource type="Script" uid="uid://nlg63yyq5nf" path="res://scripts/signup.gd" id="1_5p25r"]
[ext_resource type="Shortcut" uid="uid://7ucs00w6sxp0" path="res://assets/misc/enterShortcut.res" id="2_18qxm"]
[ext_resource type="Script" uid="uid://bvyrrh5fhychg" path="res://scripts/hyperlink.gd" id="3_t37dv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p25r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MsgPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/MsgPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MsgPanel/MarginContainer"]
layout_mode = 2
text = "Test Msg"

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GD2PHP Connection Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
placeholder_text = "Username"

[node name="Email" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
placeholder_text = "Password"
secret = true
secret_character = "*"

[node name="SignUp" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
shortcut = ExtResource("2_18qxm")
text = "Sign Up"

[node name="Login" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.5764706, 1, 1)
text = "Have an account? Log In here!"
flat = true
script = ExtResource("3_t37dv")
targetScene = "uid://106s1jctfl1c"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
download_file = "res://cache.json"

[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/SignUp" to="." method="_on_SignupButton_button_down"]
[connection signal="request_completed" from="HTTPRequest" to="." method="on_request_request_completed"]
